[package]
name = "basic_wrap"
version = "0.1.0"
authors = ["xiaolong.guo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
tokio = { version = "1.17", features = ["full"] }
warp = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
